[tool.poetry]
name = "pyscheduling_cc"
version = "0.1.2"
description = "THE python package to solve scheduling problems"
authors = ["Amine ATHMANI", "Taha ARBAOUI", "Akram LAISSAOUI"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
