[tool.poetry]
name = "pyscheduling"
version = "0.1.3"
description = "THE python package to solve scheduling problems"
authors = ["Amine ATHMANI", "Taha ARBAOUI", "Akram LAISSAOUI"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
sphinx-autoapi = "^1.9.0"
nbsphinx = "^0.8.9"
sphinx-panels = "^0.6.0"
sphinx-copybutton = "^0.5.0"
pydata-sphinx-theme = "^0.10.1"
pandoc = "^2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
