[tool.poetry]
name = "pyscheduling"
version = "0.1.7"
description = "THE python package to solve scheduling problems"
authors = ["Amine ATHMANI", "Taha ARBAOUI", "Akram LAISSAOUI", "Mourad TERZI", "Mohammed HENNI"]
license = "CC-BY-NC-ND-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.2"
networkx = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
sphinx-autoapi = "^1.9.0"
nbsphinx = "^0.8.9"
sphinx-panels = "^0.6.0"
sphinx-copybutton = "^0.5.0"
pydata-sphinx-theme = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
